# face_rec_lib

./: .gitignore  CMakeLists.txt  FaceRecSrznConfig.cmake.in  FaceRecSrznConfigVersion.cmake.in  config.h.in  release_note.txt
align/: CMakeLists.txt  align.cpp
dlib/: cmake
face_alignment/align/: CMakeLists.txt
face_ver_demo/: face_ver_demo.cpp
include/: face_align.h  face_recognition.hpp  face_repository.hpp
lfw_test/: CMakeLists.txt  face_align.cpp  face_align.h  lfw_test.cpp  test.cpp
lfw_val/: .gitignore  Makefile  lfw_val.cpp  readme.txt
src/: classifier.cpp  classifier.hpp  face_align.cpp  face_recognition.cpp  face_repository.cpp  warp.cpp
src/bayesian_model/: BayesianModel.cpp  BayesianModel.h  BinaryDataReader.h  BinaryMatAdapter.h  CMakeLists.txt  caller.cpp
